# p_thread-practice

./: CMakeLists.txt  README  daughter.txt  father.txt  mother.txt  pthread_practice.cpp  pthread_practice.h  pthread_practice.hpp  thread_practice.cpp  thread_practice.hpp
